# gpuTester

./: .gitignore  CMakeLists.txt  TODO  main.cpp
flatArray/: CMakeLists.txt  test.cpp
flatArray/controller/: CMakeLists.txt  controller.cpp  controller.h
flatArray/database/: CMakeLists.txt  database.cpp  database.cu  database.h  generator.cu  generator.h  output.cpp
flatArray/dynamicParall/: CMakeLists.txt  dynamicParallelKernel.cu  dynamicParallelKernel.h
utils/: CMakeLists.txt  utils.h
